--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,64 @@
     text-align: center;
 }
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    
+}
+
+.header-container {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    background-color:#252526;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    padding: 20px;
+    font-size: 30px;
+    color: yellow;
+    background: repeating-linear-gradient(45deg, transparent, transparent 4px, rgba(51, 51, 51, 0.3) 4px, rgba(51, 51, 51, 0.3) 8px );
+}
+
+.navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24;
+    color: yellow;;
+    background-color: #333333;
+    height: 40px;
+}
+
+.main-content {
+    display: flex;
+    flex: 1;
+}
+
+.sidebar {
+    /*background-color: #1E1E1E;*/
+    width: 300px;
+    flex: 0 0 auto;
+    background-color: #1E1E1E;
+    color: #FFFFFF;
+    padding: 20px;
+}
+
+.game-area {
+ 
+}
+
+.footer {
+    display: flex;
+}
