--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,16 @@ body {
     margin-bottom: 10px;
 }
 
+.sidebar label {
+    margin-bottom: 10px;
+    margin-left: 0px;
+    text-align: left;
+}
+
+.sidebar label input {
+    margin-right: 10px;
+}
+
 .btn {
     padding: 10px;
     margin-bottom: 10px;
@@ -75,8 +85,6 @@ body {
     width: 100%;
     display: grid;
     border: 1px solid black;
-    /*grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);*/
     background-color: black;
     grid-gap: 1px;
 }
