--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,7 @@ body {
     background-color: #1E1E1E;
     color: #FFFFFF;
     padding: 20px;
+    font-size: 20px;
 }
 
 .sidebar p {
@@ -66,13 +67,19 @@ body {
 }
 
 .sidebar label {
+    display: flex;
     margin-bottom: 10px;
     margin-left: 0px;
     text-align: left;
 }
 
 .sidebar label input {
+    align-items: center;
     margin-right: 10px;
+}
+
+#colourpicker {
+    width: 100%;
 }
 
 .btn {
