--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,6 @@ body {
 .main-content {
     display: flex;
     flex: 1;
-    width:100%;
 }
 
 .sidebar {
@@ -87,9 +86,15 @@ body {
     margin-bottom: 10px;
 }
 
+.instructions {
+    padding-top: 20px;
+    text-align: left;
+    font-size: 14px;
+}
+
 .game-area {
-    margin: 50px;
-    width: 100%;
+    margin: auto;
+    width: 900px;
     display: grid;
     border: 1px solid black;
     background-color: black;
@@ -98,6 +103,7 @@ body {
 
 .cell {
     background-color: white;
+    aspect-ratio: 1;
 }
 
 .footer {
