--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,13 @@
     text-align: center;
 }
 
+
 body {
     min-height: 100vh;
     max-height: 100vh;
     display: flex;
     flex-direction: column;
+    
 }
 
 .container {
@@ -92,20 +94,31 @@ body {
     font-size: 14px;
 }
 
+.game-area-container {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+
 .game-area {
-    margin: auto;
-    width: 900px;
+    margin: 20px;
     display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     border: 1px solid black;
     background-color: black;
-    grid-gap: 1px;
+    height: 80%;
+    aspect-ratio: 1 / 1;
+    gap: 1px;
+
 }
 
 .cell {
     background-color: white;
-    aspect-ratio: 1;
 }
 
 .footer {
     display: flex;
 }
+
